src/main/java/error/example/domain/exception/SomeDomainException.java
package error.example.domain.exception;

public class SomeDomainException extends DomainException {

    public SomeDomainException(String message) {
        super(message);
    }
}
